# wao-core/pkg/predictor/redfish/api/estimator-types.gen.go
@@ -3,10 +3,32 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.15.0 DO NOT EDIT.
 package api
 
+// Forbidden defines model for Forbidden.
+type Forbidden struct {
+	Error *struct {
+		MessageExtendedInfo *[]struct {
+			// Message Error message.
+			Message *string `json:"Message,omitempty"`
+
+			// MessageId Message ID.
+			MessageId *string `json:"MessageId,omitempty"`
+
+			// Severity Severity of the error.
+			Severity *string `json:"Severity,omitempty"`
+		} `json:"@Message.ExtendedInfo,omitempty"`
+
+		// Code Message code
+		Code *string `json:"code,omitempty"`
+
+		// Message Error message
+		Message *string `json:"message,omitempty"`
+	} `json:"error,omitempty"`
+}
+
 // InternalError defines model for InternalError.
 type InternalError struct {
 	Error *struct {
-		MessageExtendedInfo *struct {
+		MessageExtendedInfo *[]struct {
 			// Message error message
 			Message *string `json:"Message,omitempty"`
 		} `json:"@Message.ExtendedInfo,omitempty"`
@@ -36,16 +58,91 @@ type MachineLearningModel struct {
 		// Name Name of power consumption model
 		Name *string `json:"Name,omitempty"`
 
+		// Type Type of inference protocol
+		Type *string `json:"Type,omitempty"`
+
 		// Url URL of power consumption model
 		Url *string `json:"Url,omitempty"`
+
+		// Version Version of power consumption model
+		Version *string `json:"Version,omitempty"`
 	} `json:"PowerConsumptionModel,omitempty"`
 	ResponseTimeModel *struct {
 		// Name Name of response time model
 		Name *string `json:"Name,omitempty"`
 
+		// Type Type of inference protocol
+		Type *string `json:"Type,omitempty"`
+
 		// Url URL of response time model
 		Url *string `json:"Url,omitempty"`
+
+		// Version Version of response time model
+		Version *string `json:"Version,omitempty"`
 	} `json:"ResponseTimeModel,omitempty"`
+}
+
+// MethodNotAllowed defines model for MethodNotAllowed.
+type MethodNotAllowed struct {
+	Error *struct {
+		MessageExtendedInfo *[]struct {
+			// Message Error message.
+			Message *string `json:"Message,omitempty"`
+
+			// MessageId Message ID.
+			MessageId *string `json:"MessageId,omitempty"`
+
+			// Severity Severity of the error.
+			Severity *string `json:"Severity,omitempty"`
+		} `json:"@Message.ExtendedInfo,omitempty"`
+
+		// Code Message code
+		Code *string `json:"code,omitempty"`
+
+		// Message Error message
+		Message *string `json:"message,omitempty"`
+	} `json:"error,omitempty"`
+}
+
+// NotAcceptable defines model for NotAcceptable.
+type NotAcceptable struct {
+	Error *struct {
+		MessageExtendedInfo *[]struct {
+			// Message Error message.
+			Message *string `json:"Message,omitempty"`
+
+			// MessageId Message ID.
+			MessageId *string `json:"MessageId,omitempty"`
+		} `json:"@Message.ExtendedInfo,omitempty"`
+
+		// Code Message code
+		Code *string `json:"code,omitempty"`
+
+		// Message Error message
+		Message *string `json:"message,omitempty"`
+	} `json:"error,omitempty"`
+}
+
+// NotFound defines model for NotFound.
+type NotFound struct {
+	Error *struct {
+		MessageExtendedInfo *[]struct {
+			// Message Error message.
+			Message *string `json:"Message,omitempty"`
+
+			// MessageId Message ID.
+			MessageId *string `json:"MessageId,omitempty"`
+
+			// Severity Severity of the error.
+			Severity *string `json:"Severity,omitempty"`
+		} `json:"@Message.ExtendedInfo,omitempty"`
+
+		// Code Message code
+		Code *string `json:"code,omitempty"`
+
+		// Message Error message
+		Message *string `json:"message,omitempty"`
+	} `json:"error,omitempty"`
 }
 
 // System defines model for System.
@@ -54,4 +151,26 @@ type System struct {
 		// OdataId Path of the machine learning model resource
 		OdataId *string `json:"@odata.id,omitempty"`
 	} `json:"MachineLearningModel,omitempty"`
+}
+
+// Unauthorized defines model for Unauthorized.
+type Unauthorized struct {
+	Error *struct {
+		MessageExtendedInfo *[]struct {
+			// Message Error message.
+			Message *string `json:"Message,omitempty"`
+
+			// MessageId Message ID.
+			MessageId *string `json:"MessageId,omitempty"`
+
+			// Severity Severity of the error.
+			Severity *string `json:"Severity,omitempty"`
+		} `json:"@Message.ExtendedInfo,omitempty"`
+
+		// Code Message code
+		Code *string `json:"code,omitempty"`
+
+		// Message Error message
+		Message *string `json:"message,omitempty"`
+	} `json:"error,omitempty"`
 }
